--- a/src/main/resource/fxml/main.fxml
+++ b/src/main/resource/fxml/main.fxml
@@ -1,151 +1,146 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<AnchorPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="mimer29or40.foremanfx.gui.Main">
+<VBox fx:id="main" stylesheets="@../css/main.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="mimer29or40.foremanfx.gui.controller.ControllerMain">
     <children>
-        <VBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
-              AnchorPane.topAnchor="0.0">
+        <HBox fx:id="toolbar" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" minHeight="-Infinity"
+              minWidth="-Infinity" prefHeight="130.0">
             <children>
-                <HBox maxHeight="-Infinity" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity"
-                      prefHeight="130.0">
+                <VBox fx:id="toolbarProduction" maxHeight="1.7976931348623157E308" maxWidth="-Infinity"
+                      minHeight="-Infinity" minWidth="-Infinity" spacing="15.0" style="-fx-border-color: black;">
+                    <padding>
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+                    </padding>
                     <children>
-                        <VBox maxHeight="1.7976931348623157E308" maxWidth="-Infinity" minHeight="-Infinity"
-                              minWidth="-Infinity" spacing="15.0" style="-fx-border-color: black;">
-                            <padding>
-                                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
-                            </padding>
+                        <Label fx:id="productionHeader" maxHeight="1.7976931348623157E308"
+                               maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity"
+                               text="%setProduction"/>
+                        <RadioButton fx:id="buttonFixed" maxHeight="1.7976931348623157E308"
+                                     maxWidth="1.7976931348623157E308" mnemonicParsing="false" selected="true"
+                                     text="%fixedAmount">
+                            <toggleGroup>
+                                <ToggleGroup fx:id="production"/>
+                            </toggleGroup>
+                        </RadioButton>
+                        <HBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
+                              spacing="45.0">
                             <children>
-                                <Label maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
-                                       minHeight="-Infinity" minWidth="-Infinity" text="%setProduction"/>
-                                <RadioButton maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
-                                             mnemonicParsing="false" selected="true" text="%fixedAmount">
-                                    <toggleGroup>
-                                        <ToggleGroup fx:id="production"/>
-                                    </toggleGroup>
-                                </RadioButton>
-                                <HBox alignment="CENTER" maxHeight="1.7976931348623157E308"
-                                      maxWidth="1.7976931348623157E308" spacing="45.0">
-                                    <children>
-                                        <RadioButton maxHeight="1.7976931348623157E308"
-                                                     maxWidth="1.7976931348623157E308" mnemonicParsing="false"
-                                                     text="%rate" toggleGroup="$production"/>
-                                        <ComboBox prefWidth="100.0"/>
-                                    </children>
-                                </HBox>
+                                <RadioButton fx:id="buttonRate" maxHeight="1.7976931348623157E308"
+                                             maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="%rate"
+                                             toggleGroup="$production"/>
+                                <ComboBox fx:id="rateSelect" prefWidth="100.0"/>
                             </children>
-                        </VBox>
-                        <VBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="-Infinity"
-                              minHeight="-Infinity" minWidth="-Infinity" spacing="15.0">
-                            <children>
-                                <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
-                                        minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false"
-                                        text="%autoComplete"/>
-                                <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
-                                        minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false"
-                                        text="%clear"/>
-                                <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
-                                        minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false"
-                                        text="%enableDisable"/>
-                            </children>
-                            <padding>
-                                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
-                            </padding>
-                        </VBox>
-                        <VBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="-Infinity"
-                              minHeight="-Infinity" minWidth="-Infinity" spacing="15.0">
-                            <children>
-                                <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
-                                        minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false"
-                                        text="%save"/>
-                                <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
-                                        minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false"
-                                        text="%load"/>
-                                <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
-                                        minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false"
-                                        text="%export"/>
-                            </children>
-                            <padding>
-                                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
-                            </padding>
-                        </VBox>
-                        <VBox maxHeight="1.7976931348623157E308" maxWidth="-Infinity" minHeight="-Infinity"
-                              minWidth="-Infinity" spacing="10.0" style="-fx-border-color: black;">
-                            <children>
-                                <Label maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
-                                       minHeight="-Infinity" minWidth="-Infinity" text="%assemblers"/>
-                                <CheckBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
-                                          minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false"
-                                          text="%displayAssemblers"/>
-                                <CheckBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
-                                          minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false"
-                                          text="%oneAssembler"/>
-                                <CheckBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
-                                          minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false"
-                                          text="%displayMiners"/>
-                            </children>
-                            <padding>
-                                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
-                            </padding>
-                        </VBox>
-                        <VBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="-Infinity"
-                              minHeight="-Infinity" minWidth="-Infinity" spacing="15.0">
-                            <children>
-                                <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
-                                        minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false"
-                                        text="%factorioDir"/>
-                                <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
-                                        minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false"
-                                        text="%modDir"/>
-                                <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
-                                        minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false"
-                                        text="%reload"/>
-                            </children>
-                            <padding>
-                                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
-                            </padding>
-                        </VBox>
-                        <VBox maxHeight="1.7976931348623157E308" maxWidth="-Infinity" minHeight="-Infinity"
-                              minWidth="150.0" spacing="10.0" style="-fx-border-color: black;">
-                            <children>
-                                <Label maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
-                                       minHeight="-Infinity" minWidth="-Infinity" text="%language"/>
-                                <ComboBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
-                                          minHeight="-Infinity" minWidth="-Infinity"/>
-                            </children>
-                            <padding>
-                                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
-                            </padding>
-                        </VBox>
+                        </HBox>
+                    </children>
+                </VBox>
+                <VBox fx:id="toolbarFlowchart" alignment="CENTER" maxHeight="1.7976931348623157E308"
+                      maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" spacing="15.0">
+                    <children>
+                        <Button fx:id="buttonAutoComplete" maxHeight="1.7976931348623157E308"
+                                maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity"
+                                mnemonicParsing="false" text="%autoComplete"/>
+                        <Button fx:id="buttonClear" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
+                                minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" text="%clear"/>
+                        <Button fx:id="buttonEnableDisable" maxHeight="1.7976931348623157E308"
+                                maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity"
+                                mnemonicParsing="false" text="%enableDisable"/>
                     </children>
                     <padding>
                         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
                     </padding>
-                </HBox>
-                <HBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity"
-                      minWidth="-Infinity" spacing="5.0" VBox.vgrow="ALWAYS">
+                </VBox>
+                <VBox fx:id="toolbarSave" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="-Infinity"
+                      minHeight="-Infinity" minWidth="-Infinity" spacing="15.0">
                     <children>
-                        <VBox maxHeight="1.7976931348623157E308" maxWidth="-Infinity" minHeight="-Infinity"
-                              minWidth="-Infinity" prefWidth="285.0">
-                            <children>
-                                <TextField/>
-                                <ListView maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
-                                          prefHeight="250.0" VBox.vgrow="ALWAYS"/>
-                                <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
-                                        minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false"
-                                        text="%addItem"/>
-                            </children>
-                        </VBox>
-                        <ScrollPane fitToHeight="true" fitToWidth="true" HBox.hgrow="ALWAYS"/>
+                        <Button fx:id="buttonSave" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
+                                minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" text="%save"/>
+                        <Button fx:id="buttonLoad" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
+                                minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" text="%load"/>
+                        <Button fx:id="buttonExport" maxHeight="1.7976931348623157E308"
+                                maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity"
+                                mnemonicParsing="false" text="%export"/>
                     </children>
-                    <VBox.margin>
+                    <padding>
                         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
-                    </VBox.margin>
-                </HBox>
+                    </padding>
+                </VBox>
+                <VBox fx:id="toolbarAssemblers" maxHeight="1.7976931348623157E308" maxWidth="-Infinity"
+                      minHeight="-Infinity" minWidth="-Infinity" spacing="10.0" style="-fx-border-color: black;">
+                    <children>
+                        <Label fx:id="assemblerHeader" maxHeight="1.7976931348623157E308"
+                               maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity"
+                               text="%assemblers"/>
+                        <CheckBox fx:id="checkDisplayAssembler" maxHeight="1.7976931348623157E308"
+                                  maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity"
+                                  mnemonicParsing="false" text="%displayAssemblers"/>
+                        <CheckBox fx:id="checkOneAssembler" maxHeight="1.7976931348623157E308"
+                                  maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity"
+                                  mnemonicParsing="false" text="%oneAssembler"/>
+                        <CheckBox fx:id="checkDisplayMiners" maxHeight="1.7976931348623157E308"
+                                  maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity"
+                                  mnemonicParsing="false" text="%displayMiners"/>
+                    </children>
+                    <padding>
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+                    </padding>
+                </VBox>
+                <VBox fx:id="toolbarDirectory" alignment="CENTER" maxHeight="1.7976931348623157E308"
+                      maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" spacing="15.0">
+                    <children>
+                        <Button fx:id="buttonFactorioDir" maxHeight="1.7976931348623157E308"
+                                maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity"
+                                mnemonicParsing="false" text="%factorioDir"/>
+                        <Button fx:id="buttonModDir" maxHeight="1.7976931348623157E308"
+                                maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity"
+                                mnemonicParsing="false" text="%modDir"/>
+                        <Button fx:id="buttonReload" maxHeight="1.7976931348623157E308"
+                                maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity"
+                                mnemonicParsing="false" text="%reload"/>
+                    </children>
+                    <padding>
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+                    </padding>
+                </VBox>
+                <VBox fx:id="toolbarLanguage" maxHeight="1.7976931348623157E308" maxWidth="-Infinity"
+                      minHeight="-Infinity" minWidth="150.0" spacing="10.0" style="-fx-border-color: black;">
+                    <children>
+                        <Label fx:id="languageHeader" maxHeight="1.7976931348623157E308"
+                               maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity"
+                               text="%language"/>
+                        <ComboBox fx:id="languageSelect" maxHeight="1.7976931348623157E308"
+                                  maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity"/>
+                    </children>
+                    <padding>
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+                    </padding>
+                </VBox>
             </children>
-        </VBox>
+            <padding>
+                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+            </padding>
+        </HBox>
+        <HBox fx:id="workspace" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
+              minHeight="-Infinity" minWidth="-Infinity" spacing="5.0" VBox.vgrow="ALWAYS">
+            <children>
+                <VBox fx:id="itemWindow" maxHeight="1.7976931348623157E308" maxWidth="-Infinity" minHeight="-Infinity"
+                      minWidth="-Infinity" prefWidth="285.0">
+                    <children>
+                        <TextField fx:id="filter"/>
+                        <ListView fx:id="itemSelecter" maxHeight="1.7976931348623157E308"
+                                  maxWidth="1.7976931348623157E308" prefHeight="250.0" VBox.vgrow="ALWAYS"/>
+                        <Button fx:id="buttonAddItem" maxHeight="1.7976931348623157E308"
+                                maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity"
+                                mnemonicParsing="false" text="%addItem"/>
+                    </children>
+                </VBox>
+                <ScrollPane fx:id="flowchart" fitToHeight="true" fitToWidth="true" HBox.hgrow="ALWAYS"/>
+            </children>
+            <VBox.margin>
+                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+            </VBox.margin>
+        </HBox>
     </children>
-</AnchorPane>
+</VBox>
