--- a/src/main/resource/fxml/main.fxml
+++ b/src/main/resource/fxml/main.fxml
@@ -123,9 +123,9 @@
                 <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
             </padding>
         </HBox>
-        <SplitPane dividerPositions="0.34071340713407133" maxHeight="1.7976931348623157E308"
-                   maxWidth="1.7976931348623157E308" minWidth="-Infinity" prefHeight="200.0" prefWidth="200.0"
-                   styleClass="backgroundDefault" VBox.vgrow="ALWAYS">
+        <SplitPane dividerPositions="0.5" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
+                   minWidth="-Infinity" prefHeight="200.0" prefWidth="200.0" styleClass="backgroundDefault"
+                   VBox.vgrow="ALWAYS">
             <items>
                 <VBox maxHeight="1.7976931348623157E308" maxWidth="400.0" prefWidth="200.0" spacing="5.0"
                       SplitPane.resizableWithParent="false">
@@ -139,11 +139,8 @@
                                 mnemonicParsing="false" text="addItem"/>
                     </children>
                 </VBox>
-                <ScrollPane fitToHeight="true" fitToWidth="true" prefViewportHeight="198.0" prefViewportWidth="532.0">
-                    <content>
-                        <Pane fx:id="flowchart" prefHeight="200.0" prefWidth="200.0"/>
-                    </content>
-                </ScrollPane>
+                <ScrollPane fx:id="flowchart" prefViewportHeight="190.0" prefViewportWidth="398.0"
+                            styleClass="flowchartDefault"/>
             </items>
             <VBox.margin>
                 <Insets/>
