--- a/src/main/resource/fxml/main.fxml
+++ b/src/main/resource/fxml/main.fxml
@@ -6,113 +6,96 @@
 <VBox fx:id="main" styleClass="backgroundDefault" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
       fx:controller="mimer29or40.foremanfx.gui.controller.ControllerMain">
     <children>
-        <HBox maxHeight="-Infinity" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity"
-              prefHeight="130.0">
+        <HBox maxHeight="-Infinity" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="130.0">
             <children>
-                <VBox maxHeight="1.7976931348623157E308" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
-                      spacing="15.0" styleClass="sub-panelDefault">
+                <VBox maxHeight="1.7976931348623157E308" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" spacing="15.0"
+                      styleClass="sub-panelDefault">
                     <padding>
                         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
                     </padding>
                     <children>
-                        <Label fx:id="productionHeader" maxHeight="1.7976931348623157E308"
-                               maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity"
-                               text="setProduction"/>
-                        <RadioButton fx:id="buttonFixed" maxHeight="1.7976931348623157E308"
-                                     maxWidth="1.7976931348623157E308" mnemonicParsing="false" selected="true"
-                                     text="fixedAmount">
+                        <Label fx:id="productionHeader" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity"
+                               minWidth="-Infinity" text="setProduction"/>
+                        <RadioButton fx:id="buttonFixed" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false"
+                                     selected="true" text="fixedAmount">
                             <toggleGroup>
                                 <ToggleGroup fx:id="production"/>
                             </toggleGroup>
                         </RadioButton>
-                        <HBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
-                              spacing="45.0">
+                        <HBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="45.0">
                             <children>
-                                <RadioButton fx:id="buttonRate" maxHeight="1.7976931348623157E308"
-                                             maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="rate"
-                                             toggleGroup="$production"/>
-                                <ComboBox fx:id="rateSelect" maxHeight="1.7976931348623157E308"
-                                          maxWidth="1.7976931348623157E308" minWidth="100.0"/>
+                                <RadioButton fx:id="buttonRate" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
+                                             mnemonicParsing="false" text="rate" toggleGroup="$production"/>
+                                <ComboBox fx:id="rateSelect" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minWidth="100.0"/>
                             </children>
                         </HBox>
                     </children>
                 </VBox>
-                <VBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="-Infinity" minHeight="-Infinity"
-                      minWidth="-Infinity" spacing="15.0">
+                <VBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+                      spacing="15.0">
                     <children>
-                        <Button fx:id="buttonAutoComplete" maxHeight="1.7976931348623157E308"
-                                maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity"
-                                mnemonicParsing="false" text="autoComplete"/>
-                        <Button fx:id="buttonClear" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
-                                minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" text="clear"/>
-                        <Button fx:id="buttonEnableDisable" maxHeight="1.7976931348623157E308"
-                                maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity"
-                                mnemonicParsing="false" text="enableDisable"/>
+                        <Button fx:id="buttonAutoComplete" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity"
+                                minWidth="-Infinity" mnemonicParsing="false" text="autoComplete"/>
+                        <Button fx:id="buttonClear" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity"
+                                minWidth="-Infinity" mnemonicParsing="false" text="clear"/>
+                        <Button fx:id="buttonEnableDisable" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity"
+                                minWidth="-Infinity" mnemonicParsing="false" text="enableDisable"/>
                     </children>
                     <padding>
                         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
                     </padding>
                 </VBox>
-                <VBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="-Infinity" minHeight="-Infinity"
-                      minWidth="-Infinity" spacing="15.0">
+                <VBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+                      spacing="15.0">
                     <children>
-                        <Button fx:id="buttonSave" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
-                                minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" text="save"/>
-                        <Button fx:id="buttonLoad" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
-                                minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" text="load"/>
-                        <Button fx:id="buttonExport" maxHeight="1.7976931348623157E308"
-                                maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity"
-                                mnemonicParsing="false" text="export"/>
+                        <Button fx:id="buttonSave" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity"
+                                minWidth="-Infinity" mnemonicParsing="false" text="save"/>
+                        <Button fx:id="buttonLoad" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity"
+                                minWidth="-Infinity" mnemonicParsing="false" text="load"/>
+                        <Button fx:id="buttonExport" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity"
+                                minWidth="-Infinity" mnemonicParsing="false" text="export"/>
                     </children>
                     <padding>
                         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
                     </padding>
                 </VBox>
-                <VBox maxHeight="1.7976931348623157E308" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
-                      spacing="10.0" styleClass="sub-panelDefault">
+                <VBox maxHeight="1.7976931348623157E308" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" spacing="10.0"
+                      styleClass="sub-panelDefault">
                     <children>
-                        <Label fx:id="assemblerHeader" maxHeight="1.7976931348623157E308"
-                               maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity"
-                               text="assemblers"/>
-                        <CheckBox fx:id="checkDisplayAssembler" maxHeight="1.7976931348623157E308"
-                                  maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity"
-                                  mnemonicParsing="false" text="displayAssemblers"/>
-                        <CheckBox fx:id="checkOneAssembler" maxHeight="1.7976931348623157E308"
-                                  maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity"
-                                  mnemonicParsing="false" text="oneAssembler"/>
-                        <CheckBox fx:id="checkDisplayMiner" maxHeight="1.7976931348623157E308"
-                                  maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity"
-                                  mnemonicParsing="false" text="displayMiners"/>
+                        <Label fx:id="assemblerHeader" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity"
+                               minWidth="-Infinity" text="assemblers"/>
+                        <CheckBox fx:id="checkDisplayAssembler" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
+                                  minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" text="displayAssemblers"/>
+                        <CheckBox fx:id="checkOneAssembler" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity"
+                                  minWidth="-Infinity" mnemonicParsing="false" text="oneAssembler"/>
+                        <CheckBox fx:id="checkDisplayMiner" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity"
+                                  minWidth="-Infinity" mnemonicParsing="false" text="displayMiners"/>
                     </children>
                     <padding>
                         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
                     </padding>
                 </VBox>
-                <VBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="-Infinity" minHeight="-Infinity"
-                      minWidth="-Infinity" spacing="15.0">
+                <VBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+                      spacing="15.0">
                     <children>
-                        <Button fx:id="buttonFactorioDir" maxHeight="1.7976931348623157E308"
-                                maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity"
-                                mnemonicParsing="false" text="factorioDir"/>
-                        <Button fx:id="buttonOpenDir" maxHeight="1.7976931348623157E308"
-                                maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity"
-                                mnemonicParsing="false" text="openDir"/>
-                        <Button fx:id="buttonReload" maxHeight="1.7976931348623157E308"
-                                maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity"
-                                mnemonicParsing="false" text="reload"/>
+                        <Button fx:id="buttonFactorioDir" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity"
+                                minWidth="-Infinity" mnemonicParsing="false" text="factorioDir"/>
+                        <Button fx:id="buttonOpenDir" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity"
+                                minWidth="-Infinity" mnemonicParsing="false" text="openDir"/>
+                        <Button fx:id="buttonReload" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity"
+                                minWidth="-Infinity" mnemonicParsing="false" text="reload"/>
                     </children>
                     <padding>
                         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
                     </padding>
                 </VBox>
-                <VBox maxHeight="1.7976931348623157E308" maxWidth="-Infinity" minHeight="-Infinity" minWidth="150.0"
-                      spacing="10.0" styleClass="sub-panelDefault">
+                <VBox maxHeight="1.7976931348623157E308" maxWidth="-Infinity" minHeight="-Infinity" minWidth="150.0" spacing="10.0"
+                      styleClass="sub-panelDefault">
                     <children>
-                        <Label fx:id="languageHeader" maxHeight="1.7976931348623157E308"
-                               maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity"
-                               text="language"/>
-                        <ComboBox fx:id="languageSelect" maxHeight="1.7976931348623157E308"
-                                  maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity"/>
+                        <Label fx:id="languageHeader" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity"
+                               minWidth="-Infinity" text="language"/>
+                        <ComboBox fx:id="languageSelect" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity"
+                                  minWidth="-Infinity"/>
                     </children>
                     <padding>
                         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
@@ -123,24 +106,20 @@
                 <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
             </padding>
         </HBox>
-        <SplitPane dividerPositions="0.5" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
-                   minWidth="-Infinity" prefHeight="200.0" prefWidth="200.0" styleClass="backgroundDefault"
-                   VBox.vgrow="ALWAYS">
+        <SplitPane dividerPositions="0.5" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minWidth="-Infinity" prefHeight="200.0"
+                   prefWidth="200.0" styleClass="backgroundDefault" VBox.vgrow="ALWAYS">
             <items>
-                <VBox maxHeight="1.7976931348623157E308" maxWidth="400.0" prefWidth="200.0" spacing="5.0"
-                      SplitPane.resizableWithParent="false">
+                <VBox maxHeight="1.7976931348623157E308" maxWidth="400.0" prefWidth="200.0" spacing="5.0" SplitPane.resizableWithParent="false">
                     <children>
-                        <TextField fx:id="filter" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
-                                   minHeight="-Infinity" minWidth="-Infinity" styleClass="filterDefault"/>
-                        <ListView fx:id="itemSelector" maxHeight="1.7976931348623157E308"
-                                  maxWidth="1.7976931348623157E308" styleClass="listViewDefault" VBox.vgrow="ALWAYS"/>
-                        <Button fx:id="buttonAddItem" maxHeight="1.7976931348623157E308"
-                                maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity"
-                                mnemonicParsing="false" text="addItem"/>
+                        <TextField fx:id="filter" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity"
+                                   minWidth="-Infinity" styleClass="filterDefault"/>
+                        <ListView fx:id="itemSelector" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
+                                  styleClass="listViewDefault" VBox.vgrow="ALWAYS"/>
+                        <Button fx:id="buttonAddItem" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity"
+                                minWidth="-Infinity" mnemonicParsing="false" text="addItem"/>
                     </children>
                 </VBox>
-                <ScrollPane fx:id="flowchart" prefViewportHeight="190.0" prefViewportWidth="398.0"
-                            styleClass="flowchartDefault"/>
+                <ScrollPane fx:id="flowchart" prefViewportHeight="190.0" prefViewportWidth="398.0" styleClass="flowchartDefault"/>
             </items>
             <VBox.margin>
                 <Insets/>
